--- a/assetsNeztWorkNew/css/app.css
+++ b/assetsNeztWorkNew/css/app.css
@@ -577,7 +577,7 @@ html, body {
   }
 .login-img {
     width: 100%;
-    height: 350px;
+    height: 300px;
     object-fit: contain;
 }
   .login_text {
@@ -1067,8 +1067,7 @@ html, body {
 
   
 /* // creator */
-.creator_wrapper {
-    margin-top : 6rem;
+.creator__page_wrapper {
     padding : 0rem 2rem;
 }
 .creator {
