--- a/assetsNeztWorkNew/css/app.css
+++ b/assetsNeztWorkNew/css/app.css
@@ -4461,6 +4461,119 @@ option {
     font-weight: 400;  
     font-family: "Be Vietnam Pro 2022", sans-serif;  
  }
+
+
+ /* // about page  */
+ .about_page_wrapper {
+        background-color : #f7f7f7;
+        position: relative;
+        /* padding : 0rem 2rem; */
+ }
+ .about_page_banner_bg {
+    position: absolute;
+    top : 10%;
+     right : 0;
+     max-width : 500px;
+ }
+ .about_page_banner_bg--img {
+    width : 100%;
+    height : 100%;
+    object-fit : cover;
+ }
+ .about_page {
+    padding-top : 109px 2rem 0rem 2rem;
+    /* padding : 0rem 2rem; */
+ }
+ .about_page_banner {
+    margin-top : 138px;
+ }
+
+.about_page_banner_item_content--title {
+    font-size: 7rem; 
+    font-weight: 400;  
+    font-family: "VNM Sans Std", sans-serif;  
+
+    background: linear-gradient(90deg, #FFBEA9 0%, #FF6635 10%, #FF0E73 99%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+.about_page_banner_item_content--text {
+
+    font-size: 2.4rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;  
+}
+.about_page_banner_item_content--text_rgba {
+    font-size: 2.4rem;
+    color: #FF6635;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;  
+}
+.about_page_banner_item_content_item {
+    margin-top : 5.7rem;
+}
+.about_page_we_list_item {
+    padding: 2rem;
+    border-radius: 1rem;
+    background: linear-gradient(to bottom, #ddd9ff, #ffffff) !important;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+.about_page_we {
+        margin-top : 138px;
+
+}
+.about_page_we--title {
+    font-size: 5rem;
+    color: #7C4D42;  
+    font-weight: 400;  
+    font-family: "VNM Sans Std", sans-serif;  
+    text-align: center;
+}
+.about_page_we_list {
+    margin-top : 4rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+.about_page_we_list_item--image {
+    max-width : 200px;
+    height : auto;
+    text-align : center;
+    margin: 0 auto;
+    flex-shrink: 0;
+}
+.about_page_we_list_item--img {
+    width : 100%;
+    height : 100%;
+    object-fit : cover;
+}
+.about_page_we_list_item--title {
+    font-size: 2.4rem;
+    color: #45403F;  
+    font-weight: 600;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;  
+    margin-top : 3.5rem;
+
+    margin-bottom: 0px;
+    margin-top: auto; /* Đẩy phần title xuống gần cuối */
+
+}
+.about_page_we_list_item--text {
+    font-size: 2rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;  
+    margin-top : 3.5rem;
+
+        flex-grow: 1;
+
+}
+.about_page_commit {
+    margin-top : 100px;
+}
 /* // */
   @media screen and (max-width: 1600px) { 
     .event_wrapper {
@@ -4721,6 +4834,12 @@ option {
 .csbm_page_content_item--text {
     margin-top : 2rem;
 }
+.blog_page_list_wrapper {
+    width : auto;
+}
+.blog_page_list  {
+    flex-direction: column-reverse;
+}
 }
 @media screen and (max-width: 768px) { 
  
@@ -4942,6 +5061,7 @@ option {
     .csbm_page_content_item--image {
         width : 180px;
     }
+   
 }
 @keyframes slideLeft {
     to {
